# PPTT

./: .gitignore  README.md  ast_playground.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stub_sample.py  sutb_sample.py  test_ast.py  tests.sh
.github/workflows/: package.yaml  test.yaml
example/chart_example/: clone.pptx  master.pptx  readme.md  slide.json
example/python_api/: clone.pptx  master.pptx  readme.md  slide.py  slide_stubs.py
example/simple_ppt/: clone.pptx  master.pptx  new.pptx  output.json  readme.md  slide.json
example/simple_ppt_python_api/: clone.pptx  readme.md  slide.py  slide_stubs.py
example/stub_alias/: master.pptx  readme.md  slide_stubs.py
src/PPTT/: cli.py  parser.py  ppt.py  replace.py  schema.py  stub.py  type.py  utils.py
src/PPTT/replace/: __init__.py  handler.py  stub.py
src/tests/data_replace/: chart_replace.pptx  delete_slide.pptx  table_placeholder.pptx  table_replace.pptx  test_chart_replace_mode.py  test_delete_slide.py  test_font_replace.py  test_replace_mode.py  test_template_mode.py  testcase.py  tests.py  text_font_replace.pptx  text_placeholder.pptx  text_replace.pptx
