[metadata]
name = PPTT
# Version needs regex in setup.py.
url = https://github.com/spaceone-dev/PPTT
license = Apache License 2.0
maintainer = MEGAZONE SpaceONE Team
maintainer_email = admin@spaceone.dev
description = PowerPoint Template for python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    PPTT = PPTT.cli:cli

[flake8]
ignore = E226,E302,E41
exclude = ./*/.venv,./*/venv,venv,.venv,./node_modules,build
max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/PPTT/__init__.py: F401
